--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ text-align:center;
 }
 .col-1
 {
-widtrh: 40%;
+width: 40%;
 margin-left: 20px;
 float: left;
 }
@@ -74,8 +74,8 @@ margin-right: 50px;
 	<div class="col-2">Email:jagannathgvj700@gmail.com</div>
 </div><br>
 <div class="row">
-	<div class="col-1">git:githupjagan.com</div>
-	<div class="col-2">Blog:jagannathgv5.wordpress.com</div>
+	<div class="col-1">git:<a href="https://www.github.com/JAGANNATH-G">githupjagan</a></div>
+	<div class="col-2">Blog:<a href="https://www.jagannathgv5.wordpress.com">jagannathgv5.wordpress.com</a></div>
 </div><br><br>
 
 <h2 class="title">Career Objective</h2>
